Header to z-index 3 because of fixed logo

--- a/gulp-resources/sass/style.scss
+++ b/gulp-resources/sass/style.scss
@@ -68,7 +68,7 @@ header {
   right: $font--14;
   @include translate(0, calc(-50% - ((1 / 2) * #{$footer--height})));
   font-size: $font--24;
-  z-index: 2;
+  z-index: 3;
 
   &.white-nav {
 
